--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -6,3 +6,4 @@ resultLbl=Your score:
 pointsAddedLbl=Points added for card:
 pointsReducedLbl=Points reduced for card:
 approveBtn=OK
+closeBtn=Close
