--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -7,3 +7,7 @@ pointsAddedLbl=Points added for card:
 pointsReducedLbl=Points reduced for card:
 approveBtn=OK
 closeBtn=Close
+testComplete=Test Complete
+previewComplete=Preview Complete
+examExplanation=Exam Explanation
+cardsExamExplanation=This is a cards test
