--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -1,5 +1,6 @@
 exportLbl=export
-examineeLbl=enter examinee number 
+examineeLbl=enter examinee number
+enterExamineeNumber=enter examinee number 
 selectTask=select a task
 timerLbl=Time left:
 resultLbl=Your score:
@@ -11,3 +12,19 @@ testComplete=Test Complete
 previewComplete=Preview Complete
 examExplanation=Exam Explanation
 cardsExamExplanation=This is a cards test
+mathExamExplanation=This a math test
+
+examineeNumberOutput=Examinee Number
+isPresureOutput=Is Presure?
+dateOutput=Date
+questionTimeOutput=Question Time
+examineeAnswerOutput=Examinee Answer
+isCorrectAnswerOutput=Is Correct Answer
+numberOfCorrectAnswersOutput=Number Of Correct Answers
+totalTestTimeOutput=Total Test Time
+selectedDeckOutput=Selected Deck
+winAmountOutput=Win Amount
+loseAmountOutput=Lose Amount
+totalWinAmountOutput=Total Win Amount
+totalLoseAmountOutput=Total Lose Amount
+totalAmountOutput=Total Amount
