message for math test added

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -1,3 +1,5 @@
+<!-- @author Alon Kodner -->
+
 exportLbl=export
 examineeLbl=enter examinee number
 enterExamineeNumber=enter examinee number 
@@ -13,6 +15,8 @@ previewComplete=Preview Complete
 examExplanation=Exam Explanation
 cardsExamExplanation=This is a cards test
 mathExamExplanation=This a math test
+correctAnswer=Correct Answer
+incorrectAnswer=Incorrect Answer
 
 examineeNumberOutput=Examinee Number
 isPresureOutput=Is Presure?
@@ -25,6 +29,8 @@ totalTestTimeOutput=Total Test Time
 selectedDeckOutput=Selected Deck
 winAmountOutput=Win Amount
 loseAmountOutput=Lose Amount
+turnTotalAmountOutput=Turn Total AmountOutput
 totalWinAmountOutput=Total Win Amount
 totalLoseAmountOutput=Total Lose Amount
 totalAmountOutput=Total Amount
+numberOfStepsOutput=Number Of Steps
