updating the timmer and message to file

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -5,9 +5,13 @@ examineeLbl=enter examinee number
 enterExamineeNumber=enter examinee number 
 selectTask=select a task
 timerLbl=Time left:
-resultLbl=Your score:
+previousResultLbl=Previous Resul:
+currentResultLbl=Current Result:
 pointsAddedLbl=Points added for card:
 pointsReducedLbl=Points reduced for card:
+timeUpTitle=Time Is Up
+timeUpDescription=Your time is up, you lost: 
+points=points
 approveBtn=OK
 closeBtn=Close
 testComplete=Test Complete
@@ -15,17 +19,22 @@ previewComplete=Preview Complete
 examExplanation=Exam Explanation
 cardsExamExplanation=This is a cards test
 mathExamExplanation=This a math test
+bioMessage=Take the device
 correctAnswer=Correct Answer
 incorrectAnswer=Incorrect Answer
 
 examineeNumberOutput=Examinee Number
 isPresureOutput=Is Presure?
 dateOutput=Date
+cardClickedTimeOutput=Card Clicked Time
+mathQuestionAnsweredTimeOutput=Math Question Answered Time
 questionTimeOutput=Question Time
 examineeAnswerOutput=Examinee Answer
 isCorrectAnswerOutput=Is Correct Answer
 numberOfCorrectAnswersOutput=Number Of Correct Answers
 totalTestTimeOutput=Total Test Time
+testStartTimeOutput=Test Start Time
+testCompleteTimeOutput=Test Complete Time
 selectedDeckOutput=Selected Deck
 winAmountOutput=Win Amount
 loseAmountOutput=Lose Amount
