--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -14,10 +14,12 @@ timeUpDescription=Your time is up, you lost:
 points=points
 approveBtn=OK
 closeBtn=Close
-testComplete=Test Complete
+testCompleteTitle=Test Complete
+testCompleteMessage=Test Complete
 previewComplete=Preview Complete
 examExplanation=Exam Explanation
 cardsExamExplanation=This is a cards test
+cardsPressureExamExplanation=This is a pressure cards test
 mathExamExplanation=This a math test
 bioMessage=Take the device
 correctAnswer=Correct Answer
