updating the bio messages

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -24,6 +24,7 @@ mathExamExplanation=This a math test
 bioMessage=Take the device
 correctAnswer=Correct Answer
 incorrectAnswer=Incorrect Answer
+pleaseWait=Please Wait
 
 examineeNumberOutput=Examinee Number
 isPresureOutput=Is Presure?
