adding letters to cards and updating inatructions

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -14,7 +14,6 @@ timeUpDescription=Your time is up, you lost:
 points=points
 approveBtn=OK
 closeBtn=Close
-testCompleteTitle=Test Complete
 testCompleteMessage=Test Complete
 previewComplete=Preview Complete
 examExplanation=Exam Explanation
@@ -22,6 +21,7 @@ cardsExamExplanation=This is a cards test
 cardsPressureExamExplanation=This is a pressure cards test
 mathExamExplanation=This a math test
 bioMessage=Take the device
+bioMessagePreview=Bio Message Preview
 correctAnswer=Correct Answer
 incorrectAnswer=Incorrect Answer
 pleaseWait=Please Wait
