popup style updated, pressure question added

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -25,6 +25,10 @@ bioMessagePreview=Bio Message Preview
 correctAnswer=Correct Answer
 incorrectAnswer=Incorrect Answer
 pleaseWait=Please Wait
+selectStressLevelExplanation=Select Stress Level Explanation
+selectStressLevel=Select Stress Level
+highestRank=Highest Rank
+lowestRank=Lowest Rank
 
 examineeNumberOutput=Examinee Number
 isPresureOutput=Is Presure?
@@ -46,3 +50,5 @@ totalWinAmountOutput=Total Win Amount
 totalLoseAmountOutput=Total Lose Amount
 totalAmountOutput=Total Amount
 numberOfStepsOutput=Number Of Steps
+selectCard=Select Card
+selectedStressLevelOutput=Selected Stress Level
