stress check added to the midle of math test

--- a/src/com/dev/dina/proj/client/constants/MyConstants.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants.properties
@@ -29,6 +29,8 @@ selectStressLevelExplanation=Select Stress Level Explanation
 selectStressLevel=Select Stress Level
 highestRank=Highest Rank
 lowestRank=Lowest Rank
+middleMessagePressure=Middle Message Pressure
+middleMessageRegular=Middle Message Regular
 
 examineeNumberOutput=Examinee Number
 isPresureOutput=Is Presure?
@@ -52,3 +54,4 @@ totalAmountOutput=Total Amount
 numberOfStepsOutput=Number Of Steps
 selectCard=Select Card
 selectedStressLevelOutput=Selected Stress Level
+selectedMiddleStressLevelOutput=Middle Selected Stress Level
